# btc-mlops

./: .gitignore  Makefile  pyproject.toml
ci/docker/: eval.Dockerfile  features.Dockerfile  ingest.Dockerfile  serving.Dockerfile  train.Dockerfile
docs/architecture/: README.md  architecture.py
infra/: README.md
infra/envs/dev/: backend.tf  main.tf  outputs.tf  variables.tf
infra/modules/bigquery/: main.tf
infra/modules/gke/: main.tf
infra/modules/iam/: main.tf  wif.tf
infra/modules/network/: main.tf
infra/modules/registry/: main.tf
infra/modules/storage/: main.tf
notebooks/: 00_setup.ipynb  01_explore_data.ipynb  02_features_ablation.ipynb  03_baseline_vs_transformer.ipynb
notebooks/data/: BTCUSDT_1d_2026_holdout.csv  BTCUSDT_1d_merged.csv
pipelines/training/: pipeline.py
platform/: README.md
platform/argocd/: bootstrap.sh  root-app.yaml
platform/argocd/apps/: btc-monitoring.yaml  btc-serving.yaml  cert-manager.yaml  drift-monitor.yaml  ingress-nginx.yaml  kfp-workload-identity.yaml  kube-prometheus.yaml  kubeflow-pipelines-cluster.yaml  kubeflow-pipelines.yaml  mlflow.yaml  nvidia.yaml  qdrant.yaml  rag-api.yaml  vllm.yaml
platform/helm/: README.md
platform/helm/btc-serving/: Chart.yaml  README.md  values.yaml
scripts/: kfp_submit.py
src/: README.md
src/eval/: README.md  holdout.py  metrics.py
src/features/: README.md  build.py  labels.py  split.py
src/ingest/: README.md  dataset.py
src/serving/: README.md  app.py  predict.py
src/train/: README.md  cv.py  model.py  train.py
tests/: test_features.py
(+13 files in other folders)
